Fix warnings regarding SEO performance

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>The page could not be found – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."/>
+    <meta name="description" content="The page could not be found"/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
@@ -58,6 +58,7 @@
         <a
           href="mailto:hello@edvinlinden.se"
           target="_blank"
+          title="Email"
           rel="noopener noreferrer"
           >Email</a
         >
@@ -65,6 +66,7 @@
         <a
               href="https://www.linkedin.com/in/edvin-linden"
               target="_blank"
+              title="LinkedIn"
               rel="noopener noreferrer"
               >LinkedIn</a>
     </p>
@@ -74,7 +76,7 @@
       That's why I've chosen Fathom Analytics for my website analytics, which doesn't use cookies and complies with the GDPR, ePrivacy (including PECR), COPPA and CCPA. 
       Using this privacy-friendly website analytics software, your IP address is only briefly processed, and I have no way of identifying you. 
       As per the CCPA, your personal information is de-identified. You can read more about this on <a href="https://usefathom.com/compliance" target="_blank"
-        rel="noopener noreferrer">Fathom Analytics' website</a>.
+        title="Fathom Analytics" rel="noopener noreferrer">Fathom Analytics' website</a>.
     </p>
     <p class="fine-print">
       The purpose of me using this software is to understand my website traffic in the most privacy-friendly way possible so that I can continually improve my website. 
@@ -82,10 +84,11 @@
     </p>
     <p class="fine-print">
       <a
--        href="https://usefathom.com/ref/SACEEW"
--        target="_blank"
--        rel="noopener noreferrer"
--        >Get a $10 credit for Fathom Analytics by using my referral link</a>
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        title="Get a $10 credit for Fathom Analytics by using my referral link"
+        rel="noopener noreferrer"
+        >Get a $10 credit for Fathom Analytics by using my referral link</a>
     </p>
   </div>
 </footer>
