--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
 </div>
 
-  <div style="font-size: 1.5em; margin-bottom: 2em;">
-I work as a product manager at <a href="https://fortnox.se" target="_blank" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
-</div>
+  <h1 style="font-size: 1.5em; margin-bottom: 2em; color: var(--body-color);">
+I work as a product manager at <a href="https://fortnox.se" target="_blank" title="Fortnox" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
+</h1>
 
 
 <div class="project">
@@ -50,7 +50,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
                 height="360"/>
         </div>
         <p>
-            A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" target="_blank" rel="noopener noreferrer">Break This Safe</a>, but when I got to try it for myself it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
+            A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" title="Break This Safe" target="_blank" rel="noopener noreferrer">Break This Safe</a>, but when I got to try it for myself it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
         </p>
         <p>
             However the concept stuck in my head and when I created my first iPhone App, The Box Timer, I tought that "hey, this is probably something I can pull off".
@@ -67,6 +67,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
                     href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310"
                     target="_blank"
                     rel="noopener noreferrer"
+                    title="The Impossible Safe on the App Store"
                     style="text-decoration: none">
                     <img
                         src="images/appstore-badge.svg"
@@ -106,6 +107,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
                     href="https://apps.apple.com/us/app/the-box-timer/id1547518531"
                     target="_blank"
                     rel="noopener noreferrer"
+                    title="The Box Timer on the App Store"
                     style="text-decoration: none">
                     <img
                         src="images/appstore-badge.svg"
@@ -142,6 +144,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
         <a
           href="mailto:hello@edvinlinden.se"
           target="_blank"
+          title="Email"
           rel="noopener noreferrer"
           >Email</a
         >
@@ -149,6 +152,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
         <a
               href="https://www.linkedin.com/in/edvin-linden"
               target="_blank"
+              title="LinkedIn"
               rel="noopener noreferrer"
               >LinkedIn</a>
     </p>
@@ -158,7 +162,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
       That's why I've chosen Fathom Analytics for my website analytics, which doesn't use cookies and complies with the GDPR, ePrivacy (including PECR), COPPA and CCPA. 
       Using this privacy-friendly website analytics software, your IP address is only briefly processed, and I have no way of identifying you. 
       As per the CCPA, your personal information is de-identified. You can read more about this on <a href="https://usefathom.com/compliance" target="_blank"
-        rel="noopener noreferrer">Fathom Analytics' website</a>.
+        title="Fathom Analytics" rel="noopener noreferrer">Fathom Analytics' website</a>.
     </p>
     <p class="fine-print">
       The purpose of me using this software is to understand my website traffic in the most privacy-friendly way possible so that I can continually improve my website. 
@@ -166,10 +170,11 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" rel=
     </p>
     <p class="fine-print">
       <a
--        href="https://usefathom.com/ref/SACEEW"
--        target="_blank"
--        rel="noopener noreferrer"
--        >Get a $10 credit for Fathom Analytics by using my referral link</a>
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        title="Get a $10 credit for Fathom Analytics by using my referral link"
+        rel="noopener noreferrer"
+        >Get a $10 credit for Fathom Analytics by using my referral link</a>
     </p>
   </div>
 </footer>
