--- a/the-box-timer/index.html
+++ b/the-box-timer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>The Box Timer – Workout timer – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="The Box Timer is a free and simple workout timer that works just like the timer at your local box. It's perfect for workouts at home, outside or at your box."/>
+    <meta name="description" content="The Box Timer is a free and simple workout timer that works just like the timer at your local box. It&#39;s perfect for workouts at home, outside or at your box."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <script type="application/ld+json">
@@ -49,7 +49,7 @@
 </div>
 
   <p><img
-    src="/images/the-box-timer/app-preview-1.png"
+    src="/images/the-box-timer/app-preview-1.webp"
     style="
             display: block; 
             width: 100%;
@@ -68,20 +68,22 @@ The Box Timer is a free and simple workout timer that works just like the timer 
 Whether you are into functional fitness, weight lifting, stretching of any other type of workouts – The Box Timer will keep track of the time for you!
 </p>
 <p  style="text-align: center;">It could possibly be the best workout timer app there is!</p>
-<center>
+<div style="display: flex; justify-content: center; margin-top: 4rem;">
     <a
         href="https://apps.apple.com/us/app/the-box-timer/id1547518531"
         target="_blank"
         rel="noopener noreferrer"
-        style="text-decoration: none;">
+        title="The Box Timer on the App Store"
+        style="text-decoration: none;"
+        onclick="window.fathom.trackGoal('4PGG1LP5', 0);">
         <img
             src="/images/appstore-badge.svg"
             alt="The Box Timer on the App Store"
-            style="width: 250px; height: 54px; margin-top: 4rem;"
-            width="250"
+            style="width: 165px; height: 54px;"
+            width="165"
             height="54"/>
     </a>
-</center>
+</div>
 <h2 style="text-align: center; margin-top: 8rem; margin-bottom: 4rem;">Features</h2>
 <div class="feature">
     <div>
@@ -107,7 +109,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
     </div>
     <div>
         <h3>Tap to pause</h3>
-        Not all workout go as planned, tap the timer to pause and once more to start again. 
+        Not all workouts turn out as planned, tap the timer to pause and once more to start again. 
     </div>
 </div>
 <div class="feature">
@@ -174,7 +176,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
 <h2 style="text-align: center; margin-top: 8rem;">Screenshots</h2>
 <div class="app-preview">
     <img
-        src="/images/the-box-timer/app-preview-2.png"
+        src="/images/the-box-timer/app-preview-2.webp"
         style="
                 display: block; 
                 width: 100%;
@@ -185,7 +187,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         alt="The Box Timer - App Preview"
         height="325"/>
     <img
-        src="/images/the-box-timer/app-preview-3.png"
+        src="/images/the-box-timer/app-preview-3.webp"
         style="
                 display: block; 
                 width: 100%;
@@ -196,7 +198,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         alt="The Box Timer - App Preview"
         height="325"/>
     <img
-        src="/images/the-box-timer/app-preview-4.png"
+        src="/images/the-box-timer/app-preview-4.webp"
         style="
                 display: block; 
                 width: 100%;
@@ -207,20 +209,22 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         alt="The Box Timer - App Preview"
         height="325"/>
 </div>
-<center>
+<div style="display: flex; justify-content: center; margin-top: 4rem;">
     <a
         href="https://apps.apple.com/us/app/the-box-timer/id1547518531"
         target="_blank"
         rel="noopener noreferrer"
-        style="text-decoration: none;">
+        title="The Box Timer on the App Store"
+        style="text-decoration: none;"
+        onclick="window.fathom.trackGoal('4PGG1LP5', 0);">
         <img
             src="/images/appstore-badge.svg"
             alt="The Box Timer on the App Store"
-            style="width: 250px; height: 54px; margin-top: 4rem;"
-            width="250"
+            style="width: 165px; height: 54px;"
+            width="165"
             height="54"/>
     </a>
-</center>
+</div>
 
 
 <footer>
@@ -247,6 +251,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         <a
           href="mailto:hello@edvinlinden.se"
           target="_blank"
+          title="Email"
           rel="noopener noreferrer"
           >Email</a
         >
@@ -254,6 +259,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         <a
               href="https://www.linkedin.com/in/edvin-linden"
               target="_blank"
+              title="LinkedIn"
               rel="noopener noreferrer"
               >LinkedIn</a>
     </p>
@@ -263,7 +269,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
       That's why I've chosen Fathom Analytics for my website analytics, which doesn't use cookies and complies with the GDPR, ePrivacy (including PECR), COPPA and CCPA. 
       Using this privacy-friendly website analytics software, your IP address is only briefly processed, and I have no way of identifying you. 
       As per the CCPA, your personal information is de-identified. You can read more about this on <a href="https://usefathom.com/compliance" target="_blank"
-        rel="noopener noreferrer">Fathom Analytics' website</a>.
+        title="Fathom Analytics" rel="noopener noreferrer">Fathom Analytics' website</a>.
     </p>
     <p class="fine-print">
       The purpose of me using this software is to understand my website traffic in the most privacy-friendly way possible so that I can continually improve my website. 
@@ -271,10 +277,11 @@ Whether you are into functional fitness, weight lifting, stretching of any other
     </p>
     <p class="fine-print">
       <a
--        href="https://usefathom.com/ref/SACEEW"
--        target="_blank"
--        rel="noopener noreferrer"
--        >Get a $10 credit for Fathom Analytics by using my referral link</a>
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        title="Get a $10 credit for Fathom Analytics by using my referral link"
+        rel="noopener noreferrer"
+        >Get a $10 credit for Fathom Analytics by using my referral link</a>
     </p>
   </div>
 </footer>
