--- a/writing/index.html
+++ b/writing/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Writing – Edvin Lindén</title>
+    <title>Things I&#39;ve written – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."/>
+    <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-  <h1></h1>
+  <h1>Things I&#39;ve written</h1>
   <ul class="articles"><li>
             <h2>
                 <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
@@ -62,6 +62,7 @@
         <a
           href="mailto:hello@edvinlinden.se"
           target="_blank"
+          title="Email"
           rel="noopener noreferrer"
           >Email</a
         >
@@ -69,6 +70,7 @@
         <a
               href="https://www.linkedin.com/in/edvin-linden"
               target="_blank"
+              title="LinkedIn"
               rel="noopener noreferrer"
               >LinkedIn</a>
     </p>
@@ -78,7 +80,7 @@
       That's why I've chosen Fathom Analytics for my website analytics, which doesn't use cookies and complies with the GDPR, ePrivacy (including PECR), COPPA and CCPA. 
       Using this privacy-friendly website analytics software, your IP address is only briefly processed, and I have no way of identifying you. 
       As per the CCPA, your personal information is de-identified. You can read more about this on <a href="https://usefathom.com/compliance" target="_blank"
-        rel="noopener noreferrer">Fathom Analytics' website</a>.
+        title="Fathom Analytics" rel="noopener noreferrer">Fathom Analytics' website</a>.
     </p>
     <p class="fine-print">
       The purpose of me using this software is to understand my website traffic in the most privacy-friendly way possible so that I can continually improve my website. 
@@ -86,10 +88,11 @@
     </p>
     <p class="fine-print">
       <a
--        href="https://usefathom.com/ref/SACEEW"
--        target="_blank"
--        rel="noopener noreferrer"
--        >Get a $10 credit for Fathom Analytics by using my referral link</a>
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        title="Get a $10 credit for Fathom Analytics by using my referral link"
+        rel="noopener noreferrer"
+        >Get a $10 credit for Fathom Analytics by using my referral link</a>
     </p>
   </div>
 </footer>
