--- a/the-box-timer/index.html
+++ b/the-box-timer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>The Box Timer – Workout timer – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="The Box Timer is a free and simple workout timer that works just like the timer at your local box. It&#39;s perfect for workouts at home, outside or at your box."/>
+    <meta name="description" content="The Box Timer is a free and simple workout timer app for your iPhone. It&#39;s perfect for workouts at home, outside or at your box. It supports any WOD such as AMRAP, EMOM or Tabata."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <script type="application/ld+json">
@@ -21,7 +21,8 @@
         },
         "offers": {
           "@type": "Offer",
-          "price": "0"
+          "price": "0",
+          "priceCurrency": "USD"
         }
       }
     </script>
@@ -62,7 +63,7 @@
     height="325"/></p>
 <h1 style="text-align: center;">The Box Timer – Workout timer</h1>
 <p style="text-align: center;">
-The Box Timer is a free and simple workout timer that works just like the timer at your local box. It's perfect for workouts at home, outside or at your box.
+The Box Timer is a free and simple workout timer app for your iPhone. It's perfect for workouts at home, outside or at your box.
 </p>
 <p style="text-align: center;">
 Whether you are into functional fitness, weight lifting, stretching of any other type of workouts – The Box Timer will keep track of the time for you!
@@ -99,7 +100,7 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="infinity" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="svg-inline--fa fa-infinity fa-w-20 fa-3x"><path fill="currentColor" d="M471.1 96C405 96 353.3 137.3 320 174.6 286.7 137.3 235 96 168.9 96 75.8 96 0 167.8 0 256s75.8 160 168.9 160c66.1 0 117.8-41.3 151.1-78.6 33.3 37.3 85 78.6 151.1 78.6 93.1 0 168.9-71.8 168.9-160S564.2 96 471.1 96zM168.9 320c-40.2 0-72.9-28.7-72.9-64s32.7-64 72.9-64c38.2 0 73.4 36.1 94 64-20.4 27.6-55.9 64-94 64zm302.2 0c-38.2 0-73.4-36.1-94-64 20.4-27.6 55.9-64 94-64 40.2 0 72.9 28.7 72.9 64s-32.7 64-72.9 64z" class=""></path></svg>
     </div>
     <div>
-        <h3>Intervals</h3>
+        <h3>Custom intervals</h3>
         Crush any EMOM or Tabata workout with the interval timer! Use it with or without rest time – it's up to you!
     </div>
 </div>
@@ -172,6 +173,56 @@ Whether you are into functional fitness, weight lifting, stretching of any other
         </p>
         <span>Hello_Kittin – Sweden</span>
     </div>
+</div>
+<h2 style="text-align: center; margin-top: 8rem;">Frequently asked questions</h2>
+<div class="faq">
+<h3>Where can I get the app?</h3>
+<p>
+    You can get The Box Timer free on the Apple App Store for iPhone. 
+</p>
+<p>
+    I plan to release the app on the Google Play Store in the future.
+</p>
+<h3>Where can I use the app?</h3>
+<p>
+    The Box Timer is perfect for workouts at your home gym or garage gym. However the app is also great for workouts outside or at a regular gym.
+</p>
+<h3>What is a WOD?</h3>
+<p>
+    WOD stands for "Workout of the day" and is a word often used in CrossFit gyms(or boxes as they also are called).
+</p>
+<p>
+    Most gyms have a programming where they have different workouts each day, that where <i>workout of the day</i> comes from.
+</p>
+<p>
+    For most athletes a WOD is a single workout regardless if it's the actual workout of the day for the gym. For example Fran, Cindy and Murph are popular WODs.
+</p>
+<h3>What is AMRAP, EMOM and Tabata?</h3>
+<p>
+    There's a few different formats and ways to measure score of a WOD. These are almost always a combination of time, rounds or repitions. Because of that you can understand why a good timer is so useful when doing these types of workouts. 
+</p>
+<ul>
+    <li>
+        <p>
+            AMRAP is an abbreviation for as many rounds(or repitions) as possible. THe workout always have a time cap and the score is the rounds(or repititons) you completed during that time.
+        </p>
+    </li>
+    <li>
+        <p>
+            EMOM stands for every minute on the minute. It means that each minute you must start the movement and complete the prescribed repitions.
+        </p>
+    </li>
+    <li>
+        <p>
+            Tabata is a style of workout where you have a fixed time for work and rest. Usually that is 20 seconds of work followed by 10 seconds of rest, repeated for 4 minutes.
+        </p>
+    </li>
+    <li>
+        <p>
+            For time is the most basic workout format. You just have to complete the workout and however long it takes is the score.
+        </p>
+    </li>
+</ul>
 </div>
 <h2 style="text-align: center; margin-top: 8rem;">Screenshots</h2>
 <div class="app-preview">
