--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Things I&#39;ve written – Edvin Lindén</title>
+    <title>Privacy – How I handle your data – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
+    <meta name="description" content=""/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
@@ -49,13 +49,21 @@
     </div>
 </div>
 
-  <h1>Things I&#39;ve written</h1>
-  <ul><li>
-            <h2 class="mb-0">
-                <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-            </h2>
-            10 juli 2021
-        </li></ul>
+  <h1>Privacy – How I handle your data</h1>
+  <p>I want to process as little personal information as possible when you use my website.
+That's why I've chosen Fathom Analytics for my website analytics, <mark>which doesn't use cookies</mark> and complies with the GDPR, ePrivacy (including PECR), COPPA and CCPA.</p>
+<p>Using this privacy-friendly website analytics software, your IP address is only briefly processed, and <mark>I have no way of identifying you</mark>.
+As per the CCPA, your personal information is de-identified. You can read more about this on <a href="https://usefathom.com/compliance" target="_blank" title="Fathom Analytics" rel="noopener noreferrer">Fathom Analytics' website</a>.</p>
+<p>The purpose of me using this software is to understand my website traffic in the most privacy-friendly way possible so that I can continually improve my website.
+The lawful basis as per the GDPR is &quot;f); where our legitimate interests are to improve our website and business continually.&quot; As per the explanation, no personal data is stored over time.</p>
+<p><a
+    href="https://usefathom.com/ref/SACEEW"
+    target="_blank"
+    title="Get a $10 credit for Fathom Analytics by using my referral link"
+    rel="noopener noreferrer"
+    >Get a $10 credit for Fathom Analytics by using my referral link</a></p>
+</p>
+
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
     <div>
