--- a/the-impossible-safe/index.html
+++ b/the-impossible-safe/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Things I&#39;ve written – Edvin Lindén</title>
+    <title>The Impossible Safe – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Things written by Edvin Lindén, mostly about side projects such as app development."/>
+    <meta name="description" content=""/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
@@ -49,13 +49,46 @@
     </div>
 </div>
 
-  <h1>Things I&#39;ve written</h1>
-  <ul><li>
-            <h2 class="mb-0">
-                <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
-            </h2>
-            10 juli 2021
-        </li></ul>
+  <h1>The Impossible Safe</h1>
+  <div class="max-w-full">
+    <img
+        src="/images/the-impossible-safe-cover.webp"
+        class="rounded-xl w-full max-w-[720px] h-[auto] my-4 shadow-xl"
+        alt="The Box Timer App"
+        title="The Box Timer App"
+        width="720"
+        height="360"/>
+</div>
+<p>
+    A few years ago I saw Rafael Conde's <a href="http://breakthissafe.com/" title="Break This Safe" target="_blank" rel="noopener noreferrer">Break This Safe</a>, but when I got to try it for myself it didn't seem to work as intended. Maybe a couple WatchOS releases broke something vital for the game.
+</p>
+<p>
+    However the concept stuck in my head and when I created my first iPhone App, The Box Timer, I tought that "hey, this is probably something I can pull off".
+</p>
+<p>
+    With my newfound confidence I spent a couple of weekends hacking away, trying to build something that was both fun and simple enought for me to actually complete.
+</p>
+<p>
+    The result is the game you see today – enjoy it as much as I did creating it!
+</p>
+<p>
+    <center>
+        <a
+            href="https://apps.apple.com/us/app/the-impossible-safe/id1573468310"
+            target="_blank"
+            rel="noopener noreferrer"
+            title="The Impossible Safe on the App Store"
+            class="no-underline">
+            <img
+                src="/images/appstore-badge.svg"
+                alt="The Impossible Safe on the App Store"
+                style="width: 250px; height: 54px"
+                width="250"
+                height="54"/>
+        </a>
+    </center>
+</p>
+
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
     <div>
