Add goodbye message when the mouse leave the window

--- a/404.html
+++ b/404.html
@@ -54,9 +54,9 @@
 
 
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
-    <div>
-        <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
-            <a
+  <div>
+    <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
+      <a
           href="/privacy"
           title="Privacy"
           class="no-underline font-heading"
@@ -79,9 +79,10 @@
               rel="noopener noreferrer"
               class="no-underline font-heading"
               >linkedin</a>
-        </p>
-    </div>
+    </p>
+  </div>
 </footer>
 </main>
+<script src="/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
