--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 </div>
 
-  <h1 class="font-sans font-light text-2xl mb-4">
+  <h1 class="font-sans font-normal text-2xl mb-4">
 I work as a product manager at <a href="https://fortnox.se" target="_blank" title="Fortnox" rel="noopener noreferrer">Fortnox</a>, however this is a place for my side projects.
 </h1>
 
@@ -58,7 +58,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
 
 <div class="flex flex-wrap justify-between items-start">
 
-    <a href="/the-impossible-safe" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:-translate-y-1 cursor-pointer relative transition-transform hover:bg-transparent">
+    <a href="/the-impossible-safe" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
         <img 
             src="/images/the-impossible-safe-cover.webp"
             class="object-cover w-full h-full z-0"
@@ -69,7 +69,7 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
             A safe cracking game on iPhone inspired by a Apple Watch game.
         </div>
     </a>
-    <a href="/the-box-timer" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:-translate-y-1 cursor-pointer relative transition-transform hover:bg-transparent">
+    <a href="/the-box-timer" class="rounded-xl w-full md:w-[344px] h-[172px] mb-8 overflow-hidden shadow-lg hover:shadow-2xl hover:scale-105 cursor-pointer relative transition-all hover:bg-transparent">
         <img 
             src="/images/theboxtimer.webp"
             class="object-cover w-full h-full z-0"
@@ -82,9 +82,9 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
     </a>
 </div>
 <footer class="mt-24 pt-8 border-t-[1px] border-stone-300 dark:border-stone-800">
-    <div>
-        <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
-            <a
+  <div>
+    <p class="text-center mb-12 text-stone-300 dark:text-stone-800">
+      <a
           href="/privacy"
           title="Privacy"
           class="no-underline font-heading"
@@ -107,9 +107,10 @@ I work as a product manager at <a href="https://fortnox.se" target="_blank" titl
               rel="noopener noreferrer"
               class="no-underline font-heading"
               >linkedin</a>
-        </p>
-    </div>
+    </p>
+  </div>
 </footer>
 </main>
+<script src="/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
