--- a/the-impossible-safe/index.html
+++ b/the-impossible-safe/index.html
@@ -120,6 +120,7 @@
   </div>
 </footer>
 </main>
+<div id="goodbye" class="flex justify-center items-center z-50 fixed top-0 left-0 w-screen h-screen bg-stone-200 dark:bg-stone-900 text-stone-800 dark:text-stone-300 hidden transition-all font-heading text-7xl">Goodbye</div>
 <script src="/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
